--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,11 +126,32 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
     testImplementation "org.mockito:mockito-inline:3.11.2"
 
-    def paging_version = "3.0.0-alpha12"
+    def paging_version = "3.1.1"
 
     implementation "androidx.paging:paging-runtime:$paging_version"
 
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation 'org.amshove.kluent:kluent-android:1.55'
+
+    def room_version = "2.4.3"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+
+    // optional - RxJava2 support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
+    // optional - Paging 3 Integration
+    implementation "androidx.room:room-paging:$room_version"
 }
