--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     // Testing Navigation
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
